installdir = $(datadir)/fonts

dist_install_DATA = \
	ae_AlMateen.ttf \
	andale.ttf \
	lcd.ttf \
	md_khmurabi_10.ttf \
	time.ttf \
	DroidSans-Bold.ttf \
	DejaVuSans.ttf \
	HandelGotD.ttf \
	HandelGotDBol.ttf \
	nmsbd.ttf \ 
	Roboto-Caps.ttf \
	Roboto-Regular.ttf \
	LiberationSans-Bold.ttf \
	LiberationSans-BoldItalic.ttf \
	LiberationSans-Italic.ttf \
	LiberationSans-Regular.ttf

if DM800SE 
dist_install_DATA = \
	ae_AlMateen.ttf \
	andale.ttf \
	lcd.ttf \
	time.ttf \
	DroidSans-Bold.ttf \
	HandelGotD.ttf \
	HandelGotDBol.ttf \
	nmsbd.ttf \ 
	Roboto-Caps.ttf \
	Roboto-Regular.ttf 
endif

if DM500HD 
dist_install_DATA = \
	ae_AlMateen.ttf \
	andale.ttf \
	lcd.ttf \
	time.ttf \
	DroidSans-Bold.ttf \
	HandelGotD.ttf \
	HandelGotDBol.ttf \
	nmsbd.ttf \ 
	Roboto-Caps.ttf \
	Roboto-Regular.ttf 
endif

if ET8500 
dist_install_DATA += verdana.ttf Roboto-BoldItalic.ttf
endif

if ET8500S 
dist_install_DATA += verdana.ttf Roboto-BoldItalic.ttf
endif

if VUULTIMO
dist_install_DATA += analog.ttf MyriadPro-Regular.otf MyriadPro-Semibold.otf MyriadPro-SemiboldIt.otf verdana.ttf Roboto-BoldItalic.ttf
endif

if VUDUO2
dist_install_DATA += analog.ttf MyriadPro-Regular.otf MyriadPro-Semibold.otf MyriadPro-SemiboldIt.otf verdana.ttf Roboto-BoldItalic.ttf
endif

if ET10000
dist_install_DATA += analog.ttf MyriadPro-Regular.otf MyriadPro-Semibold.otf MyriadPro-SemiboldIt.otf verdana.ttf Roboto-BoldItalic.ttf
endif

if SKYLAKE
dist_install_DATA += analog.ttf MyriadPro-Regular.otf MyriadPro-Semibold.otf MyriadPro-SemiboldIt.otf verdana.ttf Roboto-BoldItalic.ttf
endif

if INIHDP
dist_install_DATA += analog.ttf MyriadPro-Regular.otf MyriadPro-Semibold.otf MyriadPro-SemiboldIt.otf verdana.ttf Roboto-BoldItalic.ttf
endif

if VUSOLO4K
dist_install_DATA += analog.ttf MyriadPro-Regular.otf MyriadPro-Semibold.otf MyriadPro-SemiboldIt.otf verdana.ttf Roboto-BoldItalic.ttf
endif

if VUULTIMO4K
dist_install_DATA += analog.ttf MyriadPro-Regular.otf MyriadPro-Semibold.otf MyriadPro-SemiboldIt.otf verdana.ttf Roboto-BoldItalic.ttf
endif

if VUUNO4KSE
dist_install_DATA += analog.ttf MyriadPro-Regular.otf MyriadPro-Semibold.otf MyriadPro-SemiboldIt.otf verdana.ttf Roboto-BoldItalic.ttf
endif
